force-app/main/default/objects/FileItem__c/FileItem__c.object-meta.xml
<CustomObject>
    <label>FileItem</label>
    <nameField>
        <displayFormat>FI-{000000}</displayFormat>
        <label>File Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FileItem</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>