force-app/main/default/objects/FileItem__c/fields/CompleteDateTime__c.field-meta.xml
<CustomField>
    <fullName>CompleteDateTime__c</fullName>
    <label>CompleteDateTime</label>
    <type>DateTime</type>
</CustomField>