force-app/main/default/objects/FileItem__c/fields/CompleteDays__c.field-meta.xml
<CustomField>
    <fullName>CompleteDays__c</fullName>
    <formula>IF( NOT( ISBLANK( CompleteDateTime__c ) ), 
		Value( TEXT( NOW() - CompleteDateTime__c) ) ,
		0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>