force-app/main/default/objects/FileItem__c/fields/ContentBodyId__c.field-meta.xml
<CustomField>
    <fullName>ContentBodyId__c</fullName>
    <label>ContentBodyId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>