force-app/main/default/objects/FileItem__c/fields/FileName__c.field-meta.xml
<CustomField>
    <fullName>FileName__c</fullName>
    <label>FileName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>