force-app/main/default/objects/FileItem__c/fields/IndexMax__c.field-meta.xml
<CustomField>
    <fullName>IndexMax__c</fullName>
    <label>IndexMax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>