force-app/main/default/objects/FileItem__c/fields/ItemId__c.field-meta.xml
<CustomField>
    <fullName>ItemId__c</fullName>
    <externalId>true</externalId>
    <label>ItemId</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>