force-app/main/default/objects/FileItem__c/fields/PackageId__c.field-meta.xml
<CustomField>
    <fullName>PackageId__c</fullName>
    <label>PackageId</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>