force-app/main/default/objects/FileItem__c/recordTypes/Item.recordType-meta.xml
<RecordType>
    <fullName>Item</fullName>
    <active>true</active>
    <label>Item</label>
</RecordType>