force-app/main/default/objects/FileItem__c/recordTypes/ItemHead.recordType-meta.xml
<RecordType>
    <fullName>ItemHead</fullName>
    <active>true</active>
    <label>ItemHead</label>
</RecordType>